web: prevent vertical shift on active list item change

--- a/client/branded/src/components/panel/views/HierarchicalLocationsView.scss
+++ b/client/branded/src/components/panel/views/HierarchicalLocationsView.scss
@@ -102,6 +102,7 @@
 
             &.active {
                 background-color: var(--primary);
+                margin-top: 0;
 
                 &:hover {
                     color: var(--light-text);
